--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from surprise import Reader, Dataset\n",
     "from surprise.model_selection import cross_validate, train_test_split, GridSearchCV\n",
-    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline, SVD, NMF"
+    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline, SVD, NMF, BaselineOnly, SlopeOne"
    ]
   },
   {
@@ -1454,36 +1454,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "efed8a1a-8233-4ae6-914e-afc19c10bd20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate baseline SVD model\n",
-    "baseline_model = SVD(random_state=28)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "deebdd74-d9a9-425e-adb5-febc8abbf12c",
+   "execution_count": null,
+   "id": "f45e5eba-a8ed-4b8b-8edb-36cbcaf9751a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
-      "\n",
-      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.1971  0.1945  0.1938  0.1938  0.1938  0.1946  0.0013  \n",
-      "MAE (testset)     0.1220  0.1213  0.1212  0.1215  0.1209  0.1214  0.0004  \n",
-      "Fit time          2.20    2.23    2.48    2.27    2.31    2.30    0.10    \n",
-      "Test time         0.22    0.14    0.13    0.13    0.23    0.17    0.04    \n"
+      "Estimating biases using als...\n"
      ]
     }
    ],
    "source": [
+    "baseline_model = BaselineOnly()\n",
     "cv_baseline = cross_validate(baseline_model, reviews, cv=5, verbose=True)"
    ]
   },
@@ -1491,16 +1475,6 @@
    "cell_type": "markdown",
    "id": "5b1407ee-48c4-4010-9be1-8b6271895c3e",
    "metadata": {},
-   "source": [
-    "The average RMSE for the baseline SVD model is approximately 0.19 with a standard deviation of 0.0018, which indicates that this model is **performing *consistently* well** across all 5 folds. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbedfd5f-8a0a-4e07-82d7-16573ab11d50",
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -1509,6 +1483,26 @@
    "metadata": {},
    "source": [
     "## Modeling Iterations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "efed8a1a-8233-4ae6-914e-afc19c10bd20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate SVD model\n",
+    "svd_model = SVD(random_state=28)\n",
+    "cv_baseline = cross_validate(svd_model, reviews, cv=5, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57fe253e-cefa-4b4c-8574-d8bd8bd5037f",
+   "metadata": {},
+   "source": [
+    "The average RMSE for the baseline SVD model is approximately 0.19 with a standard deviation of 0.0018, which indicates that this model is **performing *consistently* well** across all 5 folds. "
    ]
   },
   {
@@ -1555,6 +1549,12 @@
     "# combination of parameters that gave the best RMSE score\n",
     "print(gridsearch_svd.best_params[\"rmse\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a8bfa69-a5f7-42d7-9b6c-18b89a48505c",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1611,53 +1611,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13997bc-8a9d-444c-8e7d-feb8062b1fbc",
+   "id": "6b85a29d-80a7-42bf-b204-7eedd6329388",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3071ad2b-cb23-4732-9bd8-95ddb5d1aadc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0259092b-44cc-431f-bb57-4efed77a66bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "552fe844-d44a-4e98-9728-47af1525d2e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a86f0390-e09e-4b0b-bbc7-95abcbdee48b",
+   "execution_count": 46,
+   "id": "a1c1467d-afb2-4d8f-994f-5bfd7e0c8b97",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimating biases using als...\n"
+      "Evaluating RMSE, MAE of algorithm SlopeOne on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.2016  0.2002  0.2055  0.2060  0.2057  0.2038  0.0024  \n",
+      "MAE (testset)     0.1243  0.1240  0.1256  0.1258  0.1255  0.1251  0.0007  \n",
+      "Fit time          0.75    0.80    0.80    0.82    0.96    0.83    0.07    \n",
+      "Test time         0.21    0.19    0.20    0.40    0.22    0.24    0.08    \n"
      ]
     }
    ],
    "source": [
-    "knn_baseline = KNNBaseline(sim_options={'name':'pearson', 'user_based':True})\n",
-    "cv_knn_baseline = cross_validate(knn_baseline, reviews)"
+    "slope_one = SlopeOne()\n",
+    "cv_baseline = cross_validate(slope_one, reviews, cv=5, verbose=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fc93161-d8bf-4613-9dae-55ecb31a1c1e",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
