--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,10 @@
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from surprise import Reader, Dataset\n",
     "from surprise.model_selection import cross_validate, train_test_split, GridSearchCV\n",
-    "from surprise.prediction_algorithms import KNNWithMeans, KNNBasic, KNNBaseline, SVD, NMF, BaselineOnly, SlopeOne"
+    "from surprise.prediction_algorithms import SVD, NMF, BaselineOnly, SlopeOne\n",
+    "import random\n",
+    "\n",
+    "random.seed(28)"
    ]
   },
   {
@@ -1426,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "e67a6667-f432-4c94-b7ab-0e13e12b1ba4",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f45e5eba-a8ed-4b8b-8edb-36cbcaf9751a",
    "metadata": {},
    "outputs": [
@@ -1462,7 +1465,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimating biases using als...\n"
+      "Estimating biases using als...\n",
+      "Estimating biases using als...\n",
+      "Estimating biases using als...\n",
+      "Estimating biases using als...\n",
+      "Estimating biases using als...\n",
+      "Evaluating RMSE, MAE of algorithm BaselineOnly on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.1923  0.1923  0.1925  0.1946  0.1938  0.1931  0.0009  \n",
+      "MAE (testset)     0.1192  0.1198  0.1191  0.1207  0.1203  0.1198  0.0006  \n",
+      "Fit time          0.71    0.70    0.80    0.83    0.83    0.77    0.06    \n",
+      "Test time         0.12    0.11    0.12    0.37    0.12    0.17    0.10    \n"
      ]
     }
    ],
@@ -1487,10 +1501,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "efed8a1a-8233-4ae6-914e-afc19c10bd20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.1971  0.1925  0.1937  0.1949  0.1944  0.1945  0.0015  \n",
+      "MAE (testset)     0.1219  0.1209  0.1213  0.1214  0.1210  0.1213  0.0003  \n",
+      "Fit time          2.20    2.22    2.20    2.34    2.30    2.25    0.06    \n",
+      "Test time         0.14    0.27    0.13    0.30    0.14    0.19    0.07    \n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate SVD model\n",
     "svd_model = SVD(random_state=28)\n",
@@ -1515,21 +1543,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "10c3fc81-660e-46bc-95d6-d2cae1a8579e",
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {'n_factors': [20, 50, 100],\n",
     "          'n_epochs': [5, 10],\n",
-    "         'reg_all': [0.02, 0.05, 0.1]}\n",
+    "         'reg_all': [0.02, 0.05, 0.1],\n",
+    "         'lr_all': [0.002, 0.005, 0.01]}\n",
     "gridsearch_svd = GridSearchCV(SVD, param_grid=params, cv=5)\n",
     "gridsearch_svd.fit(reviews)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "d72909a8-416b-4f0a-a870-566d17dbc5fe",
    "metadata": {},
    "outputs": [
@@ -1537,8 +1566,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19338471233012788\n",
-      "{'n_factors': 20, 'n_epochs': 10, 'reg_all': 0.1}\n"
+      "0.19306401639057436\n",
+      "{'n_factors': 20, 'n_epochs': 10, 'reg_all': 0.1, 'lr_all': 0.01}\n"
      ]
     }
    ],
@@ -1566,12 +1595,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "9ca8bd39-084f-440a-af13-461ff5f8a20e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nmf_params = {'n_factors': [10, 15, 20, 50],\n",
+    "nmf_params = {'n_factors': [5, 10, 15, 20],\n",
     "          'n_epochs': [5, 10]}\n",
     "gridsearch_nmf = GridSearchCV(NMF, param_grid=nmf_params, cv=5)\n",
     "gridsearch_nmf.fit(reviews)"
@@ -1579,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "1e18efc6-370a-45f8-9f11-4c887a6f4864",
    "metadata": {},
    "outputs": [
@@ -1587,8 +1616,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.20838977731617186\n",
-      "{'n_factors': 15, 'n_epochs': 10}\n"
+      "0.20734323259130866\n",
+      "{'n_factors': 5, 'n_epochs': 10}\n"
      ]
     }
    ],
@@ -1618,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "id": "a1c1467d-afb2-4d8f-994f-5bfd7e0c8b97",
    "metadata": {},
    "outputs": [
@@ -1629,10 +1658,10 @@
       "Evaluating RMSE, MAE of algorithm SlopeOne on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.2016  0.2002  0.2055  0.2060  0.2057  0.2038  0.0024  \n",
-      "MAE (testset)     0.1243  0.1240  0.1256  0.1258  0.1255  0.1251  0.0007  \n",
-      "Fit time          0.75    0.80    0.80    0.82    0.96    0.83    0.07    \n",
-      "Test time         0.21    0.19    0.20    0.40    0.22    0.24    0.08    \n"
+      "RMSE (testset)    0.2022  0.2031  0.2044  0.2064  0.2048  0.2042  0.0014  \n",
+      "MAE (testset)     0.1248  0.1245  0.1254  0.1260  0.1251  0.1252  0.0005  \n",
+      "Fit time          0.79    0.84    0.83    0.83    0.83    0.82    0.02    \n",
+      "Test time         0.38    0.19    0.19    0.19    0.19    0.23    0.07    \n"
      ]
     }
    ],
@@ -1656,10 +1685,53 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0765ab09-1c11-4893-a70d-910ecc4ec408",
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "852ff7ce-7d95-4722-9560-d31b83dad520",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x1791a27d0>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use reader to load `reviews_df`\n",
+    "reviews = Dataset.load_from_df(reviews_df[['reviewer_id', 'listing_id', 'compound_scores']],reader)\n",
+    "\n",
+    "# Obtain the trainset\n",
+    "trainset = reviews.build_full_trainset()\n",
+    "\n",
+    "final_model = SVD(n_factors=20, n_epochs=10, reg_all=0.1, lr_all=0.01)\n",
+    "final_model.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a2c1c9cc-61a8-4fc2-8e21-f66c30ed2a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid=2, iid=4, r_ui=None, est=0.8533736534872289, details={'was_impossible': False})"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model.predict(2,4)"
+   ]
   },
   {
    "cell_type": "markdown",
