train test split before model

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from surprise import Reader, Dataset\n",
-    "from surprise.model_selection import cross_validate, train_test_split, GridSearchCV\n",
+    "from surprise.model_selection import cross_validate, GridSearchCV\n",
     "from surprise.prediction_algorithms import SVD, NMF, BaselineOnly, SlopeOne\n",
     "import random\n",
     "\n",
@@ -1429,6 +1429,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e05dc20a-f96b-4113-9d89-25c8e2f4690d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create train \n",
+    "reviews_train, reviews_test = train_test_split(reviews_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "id": "e67a6667-f432-4c94-b7ab-0e13e12b1ba4",
    "metadata": {},
@@ -1714,23 +1725,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "a2c1c9cc-61a8-4fc2-8e21-f66c30ed2a46",
+   "execution_count": 51,
+   "id": "2c3ead3f-450a-4c4a-aeb9-cea9c61db1c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Trainset' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m final_model\u001b[38;5;241m.\u001b[39mtest(trainset)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/surprise/prediction_algorithms/algo_base.py:160\u001b[0m, in \u001b[0;36mAlgoBase.test\u001b[0;34m(self, testset, verbose)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Test the algorithm on given testset, i.e. estimate all the ratings\u001b[39;00m\n\u001b[1;32m    143\u001b[0m \u001b[38;5;124;03min the given testset.\u001b[39;00m\n\u001b[1;32m    144\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;124;03m    that contains all the estimated ratings.\u001b[39;00m\n\u001b[1;32m    157\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;66;03m# The ratings are translated back to their original scale.\u001b[39;00m\n\u001b[0;32m--> 160\u001b[0m predictions \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m    161\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpredict(uid, iid, r_ui_trans, verbose\u001b[38;5;241m=\u001b[39mverbose)\n\u001b[1;32m    162\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m (uid, iid, r_ui_trans) \u001b[38;5;129;01min\u001b[39;00m testset\n\u001b[1;32m    163\u001b[0m ]\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m predictions\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Trainset' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "final_model.test(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09cb4d3e-b79c-4c84-8a7d-529fbe38b20b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = final_model.test(testset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c458fd4d-fda4-4830-9216-1d890840fca0",
+   "metadata": {},
+   "source": [
+    "### Create Recommendations For Each User"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "543e6bd4-909c-4e24-baf4-08ae1641570b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=2, iid=4, r_ui=None, est=0.8533736534872289, details={'was_impossible': False})"
+       "Prediction(uid=4, iid=20, r_ui=None, est=0.8533736534872289, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_model.predict(2,4)"
+    "final_model.predict(4, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c949dc41-81d5-4932-a72c-3f7ec4127934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create list of recommendations for each user sorted greatest compound score to least compound score\n",
+    "list of recs = []\n",
+    "for "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9228bd2e-ac55-48cf-8dcb-ce86596ef967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_3_recs("
    ]
   },
   {
