--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "id": "be3aae36-20d4-4f6c-981c-da33b44eb611",
    "metadata": {},
    "outputs": [],
@@ -88,6 +88,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from surprise import Reader, Dataset\n",
+    "from surprise import accuracy\n",
     "from surprise.model_selection import cross_validate, GridSearchCV\n",
     "from surprise.prediction_algorithms import SVD, NMF, BaselineOnly, SlopeOne\n",
     "import random\n",
@@ -1418,29 +1419,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a66ee3ac-1f43-4ea4-b3d5-518299c1e2f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop comments column from `reviews_df`\n",
-    "# reviews_df.drop('comments', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "e05dc20a-f96b-4113-9d89-25c8e2f4690d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create train \n",
-    "reviews_train, reviews_test = train_test_split(reviews_df)"
+    "# Create train and test groups of reviews_df\n",
+    "reviews_train_df, reviews_test_df = train_test_split(reviews_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
+   "id": "ba5704d5-611c-4edf-9af0-0bf18fc71005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 248739 entries, 193713 to 206103\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column           Non-Null Count   Dtype  \n",
+      "---  ------           --------------   -----  \n",
+      " 0   listing_id       248739 non-null  int64  \n",
+      " 1   reviewer_id      248739 non-null  int64  \n",
+      " 2   comments         248739 non-null  object \n",
+      " 3   compound_scores  248739 non-null  float64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 9.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "reviews_train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "e67a6667-f432-4c94-b7ab-0e13e12b1ba4",
    "metadata": {},
    "outputs": [],
@@ -1449,7 +1467,31 @@
     "reader = Reader(rating_scale=(-1,1))\n",
     "\n",
     "# Use reader to load `reviews_df`\n",
-    "reviews = Dataset.load_from_df(reviews_df[['reviewer_id', 'listing_id', 'compound_scores']],reader)"
+    "reviews_train = Dataset.load_from_df(reviews_train_df[['reviewer_id', 'listing_id', 'compound_scores']],reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6b6ff7c2-ef48-4a8e-b285-22fea7e5c100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DELETE\n",
+    "# Create surprise trainset\n",
+    "# trainset = reviews_train.build_full_trainset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c9a3a86e-b16a-43e6-869a-45066dba6645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DELETE\n",
+    "# Create surprise trainset\n",
+    "# testset = trainset.build_testset()"
    ]
   },
   {
@@ -1461,14 +1503,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4c75c8a2-3fbc-41bf-aecd-4398b70fda43",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "f45e5eba-a8ed-4b8b-8edb-36cbcaf9751a",
    "metadata": {},
    "outputs": [
@@ -1484,23 +1520,17 @@
       "Evaluating RMSE, MAE of algorithm BaselineOnly on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.1923  0.1923  0.1925  0.1946  0.1938  0.1931  0.0009  \n",
-      "MAE (testset)     0.1192  0.1198  0.1191  0.1207  0.1203  0.1198  0.0006  \n",
-      "Fit time          0.71    0.70    0.80    0.83    0.83    0.77    0.06    \n",
-      "Test time         0.12    0.11    0.12    0.37    0.12    0.17    0.10    \n"
+      "RMSE (testset)    0.1920  0.1948  0.1926  0.1925  0.1941  0.1932  0.0011  \n",
+      "MAE (testset)     0.1199  0.1203  0.1200  0.1199  0.1198  0.1200  0.0002  \n",
+      "Fit time          0.52    0.62    0.57    0.57    0.59    0.57    0.03    \n",
+      "Test time         0.14    0.09    0.28    0.09    0.09    0.14    0.07    \n"
      ]
     }
    ],
    "source": [
     "baseline_model = BaselineOnly()\n",
-    "cv_baseline = cross_validate(baseline_model, reviews, cv=5, verbose=True)"
+    "cv_baseline = cross_validate(baseline_model, reviews_train, cv=5, verbose=True)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b1407ee-48c4-4010-9be1-8b6271895c3e",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1512,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "efed8a1a-8233-4ae6-914e-afc19c10bd20",
    "metadata": {},
    "outputs": [
@@ -1523,17 +1553,17 @@
       "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.1971  0.1925  0.1937  0.1949  0.1944  0.1945  0.0015  \n",
-      "MAE (testset)     0.1219  0.1209  0.1213  0.1214  0.1210  0.1213  0.0003  \n",
-      "Fit time          2.20    2.22    2.20    2.34    2.30    2.25    0.06    \n",
-      "Test time         0.14    0.27    0.13    0.30    0.14    0.19    0.07    \n"
+      "RMSE (testset)    0.1960  0.1964  0.1914  0.1935  0.1962  0.1947  0.0019  \n",
+      "MAE (testset)     0.1213  0.1219  0.1207  0.1211  0.1221  0.1214  0.0005  \n",
+      "Fit time          1.72    1.81    1.68    1.69    1.68    1.72    0.05    \n",
+      "Test time         0.10    0.10    0.10    0.10    0.10    0.10    0.00    \n"
      ]
     }
    ],
    "source": [
     "# Instantiate SVD model\n",
     "svd_model = SVD(random_state=28)\n",
-    "cv_baseline = cross_validate(svd_model, reviews, cv=5, verbose=True)"
+    "cv_baseline = cross_validate(svd_model, reviews_train, cv=5, verbose=True)"
    ]
   },
   {
@@ -1554,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "id": "10c3fc81-660e-46bc-95d6-d2cae1a8579e",
    "metadata": {},
    "outputs": [],
@@ -1564,12 +1594,12 @@
     "         'reg_all': [0.02, 0.05, 0.1],\n",
     "         'lr_all': [0.002, 0.005, 0.01]}\n",
     "gridsearch_svd = GridSearchCV(SVD, param_grid=params, cv=5)\n",
-    "gridsearch_svd.fit(reviews)"
+    "gridsearch_svd.fit(reviews_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "id": "d72909a8-416b-4f0a-a870-566d17dbc5fe",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1607,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19306401639057436\n",
+      "0.19331972731574365\n",
       "{'n_factors': 20, 'n_epochs': 10, 'reg_all': 0.1, 'lr_all': 0.01}\n"
      ]
     }
@@ -1591,22 +1621,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7a8bfa69-a5f7-42d7-9b6c-18b89a48505c",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0851c397-9be2-48df-b890-ae0769d6bbb3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "9ca8bd39-084f-440a-af13-461ff5f8a20e",
    "metadata": {},
    "outputs": [],
@@ -1614,12 +1630,12 @@
     "nmf_params = {'n_factors': [5, 10, 15, 20],\n",
     "          'n_epochs': [5, 10]}\n",
     "gridsearch_nmf = GridSearchCV(NMF, param_grid=nmf_params, cv=5)\n",
-    "gridsearch_nmf.fit(reviews)"
+    "gridsearch_nmf.fit(reviews_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "id": "1e18efc6-370a-45f8-9f11-4c887a6f4864",
    "metadata": {},
    "outputs": [
@@ -1627,8 +1643,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.20734323259130866\n",
-      "{'n_factors': 5, 'n_epochs': 10}\n"
+      "0.20482979051071215\n",
+      "{'n_factors': 10, 'n_epochs': 10}\n"
      ]
     }
    ],
@@ -1650,15 +1666,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b85a29d-80a7-42bf-b204-7eedd6329388",
+   "execution_count": 36,
+   "id": "85b928c4-1fdf-4107-b605-d6b5fb224f6a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.0510\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.05100521070681618"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DELETE\n",
+    "#slope_one_model = SlopeOne()\n",
+    "#slope_one_model.fit(trainset)\n",
+    "#slope_one_preds = slope_one_model.test(testset)\n",
+    "#accuracy.rmse(slope_one_preds)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "a1c1467d-afb2-4d8f-994f-5bfd7e0c8b97",
    "metadata": {},
    "outputs": [
@@ -1669,16 +1709,16 @@
       "Evaluating RMSE, MAE of algorithm SlopeOne on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.2022  0.2031  0.2044  0.2064  0.2048  0.2042  0.0014  \n",
-      "MAE (testset)     0.1248  0.1245  0.1254  0.1260  0.1251  0.1252  0.0005  \n",
-      "Fit time          0.79    0.84    0.83    0.83    0.83    0.82    0.02    \n",
-      "Test time         0.38    0.19    0.19    0.19    0.19    0.23    0.07    \n"
+      "RMSE (testset)    0.2015  0.2005  0.1998  0.2078  0.2048  0.2029  0.0030  \n",
+      "MAE (testset)     0.1246  0.1241  0.1241  0.1261  0.1256  0.1249  0.0008  \n",
+      "Fit time          0.59    0.62    0.61    0.64    0.64    0.62    0.02    \n",
+      "Test time         0.15    0.14    0.15    0.22    0.44    0.22    0.11    \n"
      ]
     }
    ],
    "source": [
     "slope_one = SlopeOne()\n",
-    "cv_baseline = cross_validate(slope_one, reviews, cv=5, verbose=True)"
+    "cv_baseline = cross_validate(slope_one, reviews_train, cv=5, verbose=True)"
    ]
   },
   {
@@ -1721,6 +1761,16 @@
     "\n",
     "final_model = SVD(n_factors=20, n_epochs=10, reg_all=0.1, lr_all=0.01)\n",
     "final_model.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3243ead1-4219-4d48-944e-f4d8d69c9166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testset = trainset.build_anti_testset()"
    ]
   },
   {
@@ -1799,12 +1849,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "c7d6f3f9-203d-476e-8c0f-63447e696912",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([          20456656,           24605088,           38448857,\n",
+       "                 47405082,           50803225, 863654247733503847,\n",
+       "       879109424040368993])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DELETE\n",
+    "reviews_df[reviews_df['reviewer_id'] == 151320586]['listing_id'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "9228bd2e-ac55-48cf-8dcb-ce86596ef967",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def top_3_recs("
+    "def top_3_recs(user_id, listings_df=listings_df):\n",
+    "    # Create a list of listings user already rated\n",
+    "    user_listings = reviews_df[reviews_df['reviewer_id'] == user_id]['listing_id'].unique()\n",
+    "\n",
+    "    # Create a list of all listings\n",
+    "    all_listings = reviews_df['listing_id'].unique()\n",
+    "\n",
+    "    # Create a list of listings that the user has not yet rated and will be predicted\n",
+    "    listings_to_predict = list(set(all_listings) - set(user_listings))\n",
+    "\n",
+    "    # Create matrix to predict listing ratings for unrated listings\n",
+    "    user_listing_pairs = [(user_id, listing_id, 0) for listing_id in listings_to_predict]\n",
+    "\n",
+    "    # Predictions for unrated listings\n",
+    "    predictions = final_model.test(user_listing_pairs)\n",
+    "\n",
+    "    # Sort user predictions greatest to least and save top 3\n",
+    "    top_3_recs = sorted(predictions, key = lambda x: x.est, reverse=True)[:2]\n",
+    "\n",
+    "    # \n",
+    "    \n",
+    "    \n",
+    "    return top_3_listings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4627e424-5031-4d16-9a6a-b4fd191fc89f",
+   "metadata": {},
+   "source": [
+    "  predictions_cf = model_svd.test(user_movie_pairs)\n",
+    "\n",
+    "  top_n_recommendations = sorted(predictions_cf, key = lambda x: x.est)[:n]\n",
+    "\n",
+    "  for pred in top_n_recommendations:\n",
+    "    predicted_rating = pred.est\n",
+    "    print(predicted_rating)\n",
+    "\n",
+    "\n",
+    "  top_n_movie_ids = [int(pred.iid) for pred in top_n_recommendations]\n",
+    "\n",
+    "  top_n_movies = movie_encoder.inverse_transform(top_n_movie_ids)\n",
+    "\n",
+    "  return top_n_movies"
    ]
   },
   {
